backend - owner - dish endpoints
