# mikurando-backend/src/controllers/restaurantController.js
@@ -165,3 +165,115 @@ exports.updateOpeningHours = async (req, res) => {
         res.status(500).json({ error: 'Internal Server Error' });
     }
 };
+
+exports.createDish = async (req, res) => {
+    const { restaurantId } = req.params;
+    const ownerId = req.user.userId;
+    const { category_id, name, price} = req.body;
+
+    try {
+        const isOwner = await restaurantModel.checkOwnership(restaurantId, ownerId);
+        if (!isOwner) {
+            return res.status(404).json({ error: 'Access denied or restaurant not found.' });
+        }
+
+        const validCategory = await restaurantModel.verifyCategoryOwnership(category_id, restaurantId);
+        if (!validCategory) {
+            return res.status(400).json({ error: `Category ID ${category_id} does not belong to this restaurant.` });
+        }
+
+        const newDish = await restaurantModel.addDish(restaurantId, req.body);
+
+        res.status(201).json(newDish);
+
+    } catch (err) {
+        if (err.code === '23503') {
+            return res.status(400).json({ error: 'Invalid Category ID.' });
+        }
+        console.error('Create Dish Error:', err);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+};
+
+exports.updateDish = async (req, res) => {
+    const { restaurantId, dishId } = req.params;
+    const ownerId = req.user.userId;
+    const { category_id, name, price} = req.body;
+
+    try {
+        const isOwner = await restaurantModel.checkOwnership(restaurantId, ownerId);
+        if (!isOwner) return res.status(404).json({ error: 'Access denied.' });
+
+        const validCategory = await restaurantModel.verifyCategoryOwnership(category_id, restaurantId);
+        if (!validCategory) {
+            return res.status(400).json({ error: `Category ID ${category_id} does not belong to this restaurant.` });
+        }
+
+        const updatedDish = await restaurantModel.updateDish(dishId, restaurantId, ownerId, req.body);
+
+        if (!updatedDish) {
+            return res.status(404).json({ error: 'Dish not found.' });
+        }
+
+        res.status(200).json(updatedDish);
+
+    } catch (err) {
+        console.error('Update Dish Error:', err);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+};
+
+exports.deleteDish = async (req, res) => {
+    const { restaurantId, dishId } = req.params;
+    const ownerId = req.user.userId;
+
+    try {
+        const isOwner = await restaurantModel.checkOwnership(restaurantId, ownerId);
+        if (!isOwner) return res.status(404).json({ error: 'Access denied.' });
+
+        const deleted = await restaurantModel.deleteDish(dishId, restaurantId, ownerId);
+
+        if (!deleted) {
+            return res.status(404).json({ error: 'Dish not found.' });
+        }
+
+        res.status(200).json({ message: 'Dish deleted successfully.' });
+
+    } catch (err) {
+        // Error Code 23503: Foreign key is used in other table
+        if (err.code === '23503') {
+            return res.status(400).json({
+                error: 'Cannot delete dish because it is part of past orders. Mark it as unavailable instead.'
+            });
+        }
+        console.error('Delete Dish Error:', err);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+};
+
+exports.setDishAvailability = async (req, res) => {
+    const { restaurantId, dishId } = req.params;
+    const ownerId = req.user.userId;
+    const { available } = req.body;
+
+    try {
+        const isOwner = await restaurantModel.checkOwnership(restaurantId, ownerId);
+        if (!isOwner) return res.status(403).json({ error: 'Access denied.' });
+
+        const updated = await restaurantModel.setAvailability(dishId, restaurantId, available);
+
+        if (!updated) {
+            return res.status(404).json({ error: 'Dish not found.' });
+        }
+
+        res.status(200).json({
+            message: `Dish is now ${updated.avaliable ? 'available' : 'unavailable'}.`,
+            dish_id: updated.dish_id,
+            available: updated.avaliable
+        });
+
+    } catch (err) {
+        console.error('Patch Dish Error:', err);
+        res.status(500).json({ error: 'Internal Server Error' });
+    }
+};
